<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#767272"
    android:padding="5dp">

    <TextView
        android:id="@+id/header"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:background="@color/chrome_green"
        android:padding="10dp"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="@dimen/title_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/what_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#ffff"
        android:hint="@string/what_text"
        android:padding="5dp"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/header" />

    <EditText
        android:id="@+id/where_text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#ffff"
        android:hint="@string/where_text"
        android:padding="5dp"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/what_text" />

    <Button
        android:id="@+id/where_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_size"
        android:layout_marginTop="5dp"
        android:background="@color/chrome_green"
        android:text="@string/where_button"
        android:textSize="@dimen/text_size"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/info_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/where_text" />

    <Button
        android:id="@+id/info_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_size"
        android:layout_marginTop="5dp"

        android:background="@color/chrome_green"
        android:text="@string/info_button"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/where_button"
        app:layout_constraintTop_toBottomOf="@+id/where_text" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_size"
        android:layout_marginTop="16dp"
        android:background="@color/chrome_green"
        android:text="@string/add_button"
        android:textSize="@dimen/text_size"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toStartOf="@+id/delete_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/where_button" />

    <Button
        android:id="@+id/delete_button"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_size"
        android:layout_marginTop="16dp"
        android:background="@color/chrome_green"
        android:text="@string/delete_button"
        android:textSize="@dimen/text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/add_button"
        app:layout_constraintTop_toBottomOf="@+id/where_button" />

</androidx.constraintlayout.widget.ConstraintLayout>
